(Tooltip) Fix hover bugs related to <label>
- The <label> element made the button be activated on click and hover even if the mouse
  was only hovering over the label element but not the button itself.
- As the <label> elements are neede for accessibility, they are now absolutely positioned
  but out of the screen.

--- a/frontend/src/common/styles/tooltip.css
+++ b/frontend/src/common/styles/tooltip.css
@@ -19,7 +19,8 @@
 	color: var(--color);
 	border-radius: 50%;
 
-	transition: color 0.5s ease-out;
+	transition: all 0.1s ease-out;
+	transition-property: color, border-color;
 }
 
 .tooltip__button:hover {
